# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/models/red car/: Untitled.gltf
data/shaders/: basic.shader  blinn_phong.shader  full.shader  main.glsl  material.shader  multiple_lights.shader  programs.glsl  shadow.glsl  shadow_map.glsl  shadow_point.glsl  simple.shader  skybox.glsl  textured.shader
source/: Camera.cpp  Camera.hpp  Components.cpp  Components.hpp  Ecs.cpp  Ecs.hpp  Instance.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Primitives.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Shadow.cpp  Shadow.hpp  ShadowMap.cpp  ShadowMap.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  Vertex.hpp  callbacks.cpp  callbacks.hpp  error_macro.hpp
